@@ -1,3 +1,8 @@
+Sat Nov 14 09:19:19 CET 2009
+  * New methods in the api
+  * Fixed error messages
+  * More docs and tests
+
 Thu, 12 Nov 2009 10:00:00 +0100
   * Fixed test errors on Linux
 
